--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
+    "react-confetti": "^6.4.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
@@ -33,6 +34,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "react-simple-maps": "^3.0.0",
+    "react-step-wizard": "^5.3.11",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
     "recharts": "^2.15.3",
