--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-node_modules/
-dist/
+
+# Environment Variables
+.env
+.env.local
+.env.production
+.env.development
+*.env
+.env*
